--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:server": "node server",
+    "start:server": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
