--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "express": "^4.16.0",
     "morgan": "^1.9.0",
