--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "express": "^4.16.0",
     "morgan": "^1.9.0",
@@ -21,7 +22,9 @@
     "react-dom": "^15.2.1",
     "react-router": "^2.8.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.0.14"
+    "react-scripts": "^1.0.14",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
