--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-grid-gallery": "^0.4.6",
     "react-router": "^2.8.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.14"
