--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "express": "^4.16.0",
+    "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "mysql": "^2.14.1",
     "prop-types": "^15.6.0",
