--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.14.1",
     "prop-types": "^15.6.0",
     "react": "^15.2.1",
+    "react-contenteditable": "^2.0.5",
     "react-dom": "^15.2.1",
     "react-grid-gallery": "^0.4.6",
     "react-router": "^4.2.0",
